Add table of contents per notebook
Provide a table of contents for every notebook, give more general titles for notebooks and clear the output cells

--- a/Unit 3 - NumPy.ipynb
+++ b/Unit 3 - NumPy.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NumPy Calculations\n",
+    "# Number Crunching\n",
     "\n",
     "Although `lambda` is much faster than the conventional for loop, there is something even faster: NumPy arrays! The NumPy package (numerical Python) provides access to a new data structure called arrays which allow efficient linear algebra (vector and matrix) operations. "
    ]
@@ -16,12 +16,12 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#NumPy-Calculations\" data-toc-modified-id=\"NumPy-Calculations-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>NumPy Calculations</a></span><ul class=\"toc-item\"><li><span><a href=\"#Vectors-(1D)\" data-toc-modified-id=\"Vectors-(1D)-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Vectors (1D)</a></span><ul class=\"toc-item\"><li><span><a href=\"#Array-characteristics\" data-toc-modified-id=\"Array-characteristics-1.1.1\"><span class=\"toc-item-num\">1.1.1&nbsp;&nbsp;</span>Array characteristics</a></span></li><li><span><a href=\"#Creating-and-using-arrays\" data-toc-modified-id=\"Creating-and-using-arrays-1.1.2\"><span class=\"toc-item-num\">1.1.2&nbsp;&nbsp;</span>Creating and using arrays</a></span></li><li><span><a href=\"#Growing-arrays\" data-toc-modified-id=\"Growing-arrays-1.1.3\"><span class=\"toc-item-num\">1.1.3&nbsp;&nbsp;</span>Growing arrays</a></span></li></ul></li><li><span><a href=\"#Matrices-(2D)\" data-toc-modified-id=\"Matrices-(2D)-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Matrices (2D)</a></span><ul class=\"toc-item\"><li><span><a href=\"#Indexing-matrices\" data-toc-modified-id=\"Indexing-matrices-1.2.1\"><span class=\"toc-item-num\">1.2.1&nbsp;&nbsp;</span>Indexing matrices</a></span></li><li><span><a href=\"#Basic-matrix-operations\" data-toc-modified-id=\"Basic-matrix-operations-1.2.2\"><span class=\"toc-item-num\">1.2.2&nbsp;&nbsp;</span>Basic matrix operations</a></span></li></ul></li><li><span><a href=\"#Linear-algebra\" data-toc-modified-id=\"Linear-algebra-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Linear algebra</a></span></li><li><span><a href=\"#Polynomials\" data-toc-modified-id=\"Polynomials-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>Polynomials</a></span></li><li><span><a href=\"#Other-abilities\" data-toc-modified-id=\"Other-abilities-1.5\"><span class=\"toc-item-num\">1.5&nbsp;&nbsp;</span>Other abilities</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Vectors-(1D)\" data-toc-modified-id=\"Vectors-(1D)-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Vectors (1D)</a></span><ul class=\"toc-item\"><li><span><a href=\"#Array-characteristics\" data-toc-modified-id=\"Array-characteristics-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Array characteristics</a></span></li><li><span><a href=\"#Creating-and-using-arrays\" data-toc-modified-id=\"Creating-and-using-arrays-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Creating and using arrays</a></span></li><li><span><a href=\"#Growing-arrays\" data-toc-modified-id=\"Growing-arrays-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Growing arrays</a></span></li></ul></li><li><span><a href=\"#Matrices-(2D)\" data-toc-modified-id=\"Matrices-(2D)-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Matrices (2D)</a></span><ul class=\"toc-item\"><li><span><a href=\"#Indexing-matrices\" data-toc-modified-id=\"Indexing-matrices-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Indexing matrices</a></span></li><li><span><a href=\"#Basic-matrix-operations\" data-toc-modified-id=\"Basic-matrix-operations-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Basic matrix operations</a></span></li></ul></li><li><span><a href=\"#Linear-algebra\" data-toc-modified-id=\"Linear-algebra-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Linear algebra</a></span></li><li><span><a href=\"#Polynomials\" data-toc-modified-id=\"Polynomials-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Polynomials</a></span></li><li><span><a href=\"#Other-abilities\" data-toc-modified-id=\"Other-abilities-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>Other abilities</a></span></li></ul></div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,22 +196,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 2 4 6 8], \n",
-      "[ 0.   2.5  5.   7.5 10. ], \n",
-      "[1.00000000e+00 3.16227766e+02 1.00000000e+05 3.16227766e+07\n",
-      " 1.00000000e+10]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a1 = np.arange(0, 10, 2)   # creates values in steps of 2 from 0 to 10\n",
     "a2 = np.linspace(0, 10, 5) # 5 values linearly spaced from 0 to 10\n",
@@ -222,19 +211,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.4189163  0.9420887  0.0124588  0.16554233 0.73185349], \n",
-      "[ 0.86881277 -0.39600998 -2.18424673 -0.54788797  1.68203845], \n",
-      "[6 1 6 6 5 2 3 2 5 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a4 = np.random.rand(5)                # floats from 0 to 1 and shape 5\n",
     "a5 = np.random.randn(5)               # Gaussian floats around zero and shape 5\n",
@@ -841,13 +820,13 @@
    "base_numbering": 1,
    "nav_menu": {},
    "number_sections": true,
-   "sideBar": true,
-   "skip_h1_title": false,
+   "sideBar": false,
+   "skip_h1_title": true,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": true,
    "toc_position": {},
-   "toc_section_display": true,
+   "toc_section_display": false,
    "toc_window_display": false
   },
   "varInspector": {
