--- a/Unit 1 - Data Objects.ipynb
+++ b/Unit 1 - Data Objects.ipynb
@@ -4,28 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Objects\n",
+    "# First Steps on Jupyter\n",
     "\n",
-    "Welcome to Jupyter! The word itself is an amalgamation of Julia, Python and R and is a cell-based programming environment. Furthermore, it’s very easy to learn, read and maintain. Previously, the Spyder editor was used, but with Jupyter notebooks blocks of code can be executed separately (which makes debugging much easier too)! \n",
+    "Welcome to Jupyter! The word itself is an amalgamation of Julia, Python and R and is a cell-based programming environment. Furthermore, it's very easy to learn, read and maintain. Previously, the Spyder editor was used, but with Jupyter notebooks blocks of code can be executed separately (which makes debugging much easier too)! \n",
     "\n",
-    "Blocks of text such as this one offer explanations and help. These are written in [_Markdown_](https://help.github.com/articles/markdown-basics/). Be sure to click around on these cells to see the hidden formatting syntax.\n",
-    "\n",
-    "#### Contents:\n",
-    "1. Simple math\n",
-    "    * Mathematical operations\n",
-    "    * Importing a module\n",
-    "    * Getting help\n",
-    "2. Numerical objects\n",
-    "    * Assigning variables\n",
-    "    * Assignment operators\n",
-    "3. Data sequences\n",
-    "    * Strings\n",
-    "    * Tuples\n",
-    "    * Lists\n",
-    "    * Indexing and changing sequences\n",
-    "    * Dictionaries\n",
-    "    * Formatted printing\n",
-    "    * Copying objects"
+    "Blocks of text such as this one offer explanations and help. These are written in [_Markdown_](https://help.github.com/articles/markdown-basics/). Try to double-click these cells to see the hidden formatting syntax."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Simple-math\" data-toc-modified-id=\"Simple-math-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Simple math</a></span><ul class=\"toc-item\"><li><span><a href=\"#Mathematical-operations\" data-toc-modified-id=\"Mathematical-operations-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Mathematical operations</a></span></li><li><span><a href=\"#Importing-a-module\" data-toc-modified-id=\"Importing-a-module-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Importing a module</a></span></li><li><span><a href=\"#Getting-help\" data-toc-modified-id=\"Getting-help-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Getting help</a></span></li></ul></li><li><span><a href=\"#Numerical-objects\" data-toc-modified-id=\"Numerical-objects-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Numerical objects</a></span><ul class=\"toc-item\"><li><span><a href=\"#Assigning-variables\" data-toc-modified-id=\"Assigning-variables-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Assigning variables</a></span></li><li><span><a href=\"#Assignment-operators\" data-toc-modified-id=\"Assignment-operators-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Assignment operators</a></span></li></ul></li><li><span><a href=\"#Data-sequences\" data-toc-modified-id=\"Data-sequences-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Data sequences</a></span><ul class=\"toc-item\"><li><span><a href=\"#Strings\" data-toc-modified-id=\"Strings-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Strings</a></span></li><li><span><a href=\"#Tuples\" data-toc-modified-id=\"Tuples-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Tuples</a></span></li><li><span><a href=\"#Lists\" data-toc-modified-id=\"Lists-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Lists</a></span></li><li><span><a href=\"#Indexing-and-changing-sequences\" data-toc-modified-id=\"Indexing-and-changing-sequences-3.4\"><span class=\"toc-item-num\">3.4&nbsp;&nbsp;</span>Indexing and changing sequences</a></span></li><li><span><a href=\"#Dictionaries\" data-toc-modified-id=\"Dictionaries-3.5\"><span class=\"toc-item-num\">3.5&nbsp;&nbsp;</span>Dictionaries</a></span></li><li><span><a href=\"#Formatted-printing\" data-toc-modified-id=\"Formatted-printing-3.6\"><span class=\"toc-item-num\">3.6&nbsp;&nbsp;</span>Formatted printing</a></span></li><li><span><a href=\"#Copying-objects\" data-toc-modified-id=\"Copying-objects-3.7\"><span class=\"toc-item-num\">3.7&nbsp;&nbsp;</span>Copying objects</a></span></li><li><span><a href=\"#Exercises\" data-toc-modified-id=\"Exercises-3.8\"><span class=\"toc-item-num\">3.8&nbsp;&nbsp;</span>Exercises</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -869,7 +862,7 @@
    "source": [
     "Slicing is used to cut out a piece of a sequence between certain indices in the order `[start:end:step]`. All three slice components are not required; by default, start is 0, end is the last and step is 1. Consider the following roster:\n",
     "\n",
-    "<img src=\"Slicing roster.png\">"
+    "![title](Figures/Slicing_Roster.png)"
    ]
   },
   {
@@ -1236,6 +1229,48 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.1"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": true,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
