--- a/Unit 2 - Iteration.ipynb
+++ b/Unit 2 - Iteration.ipynb
@@ -4,18 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Iteration\n",
+    "# Stepping Up\n",
     "\n",
-    "From the previous tutorial it is evident that iterative procedures need to be explored further. The real algorithmic thinking starts here! \n",
-    "\n",
-    "#### Contents:\n",
-    "1. Looping\n",
-    "    * Conditions\n",
-    "2. Branching\n",
-    "3. Functions\n",
-    "    * Arguments\n",
-    "    * Interactivity\n",
-    "    * Functional programming"
+    "From the previous tutorial it is evident that iterative procedures need to be explored further. The real algorithmic thinking starts here! "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Looping\" data-toc-modified-id=\"Looping-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Looping</a></span><ul class=\"toc-item\"><li><span><a href=\"#Conditions\" data-toc-modified-id=\"Conditions-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Conditions</a></span></li></ul></li><li><span><a href=\"#Branching\" data-toc-modified-id=\"Branching-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Branching</a></span></li><li><span><a href=\"#Functions\" data-toc-modified-id=\"Functions-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Functions</a></span><ul class=\"toc-item\"><li><span><a href=\"#Arguments\" data-toc-modified-id=\"Arguments-3.1\"><span class=\"toc-item-num\">3.1&nbsp;&nbsp;</span>Arguments</a></span></li><li><span><a href=\"#Interactivity\" data-toc-modified-id=\"Interactivity-3.2\"><span class=\"toc-item-num\">3.2&nbsp;&nbsp;</span>Interactivity</a></span></li><li><span><a href=\"#Functional-programming\" data-toc-modified-id=\"Functional-programming-3.3\"><span class=\"toc-item-num\">3.3&nbsp;&nbsp;</span>Functional programming</a></span></li></ul></li><li><span><a href=\"#Style-guidelines\" data-toc-modified-id=\"Style-guidelines-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Style guidelines</a></span></li></ul></div>"
    ]
   },
   {
@@ -830,6 +831,48 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.1"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": false,
+   "skip_h1_title": true,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {},
+   "toc_section_display": false,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
