Update meshgrid filepath
Change filepath for meshgrid.png in Unit 3 to match new destination

--- a/Unit 1 - Data Objects.ipynb
+++ b/Unit 1 - Data Objects.ipynb
@@ -862,7 +862,7 @@
    "source": [
     "Slicing is used to cut out a piece of a sequence between certain indices in the order `[start:end:step]`. All three slice components are not required; by default, start is 0, end is the last and step is 1. Consider the following roster:\n",
     "\n",
-    "![title](Figures/Slicing_Roster.png)"
+    "![](Figures/Slicing_Roster.png)"
    ]
   },
   {
