--- a/Unit 3 - NumPy.ipynb
+++ b/Unit 3 - NumPy.ipynb
@@ -485,9 +485,9 @@
    "source": [
     "Meshgrid forms 2 matrices, as illustrated below. Essentially, if you were to make a 3-D plot, you require a grid of points on the XY-plane. The xx matrix therefore represents the x-coordinates over that grid. \n",
     "\n",
-    "<img src=\"Meshgrid.png\">\n",
+    "![](Figures/Meshgrid.png)\n",
     "\n",
-    "(Answer on https://stackoverflow.com/questions/36013063/what-is-the-purpose-of-meshgrid-in-python-numpy)"
+    "(Answer on [StackOverflow](https://stackoverflow.com/questions/36013063/what-is-the-purpose-of-meshgrid-in-python-numpy))"
    ]
   },
   {
