Change study guide to .pdf
Note their are still technical difficulties with the customisation options.

--- a/Project/Project description.ipynb
+++ b/Project/Project description.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Interactive engineering diagram\n",
     "\n",
-    "Your project for this course will involve creating a complex, interactive diagram and presenting your code to the group. You must provide documentation for your code (e.g. a markdown cell, a docstring and comments) with proper variable names. You must push your code to GitHub in this folder.\n",
+    "Your project for this course will involve creating a complex, interactive diagram and presenting your code to the group. You must provide documentation for your code (e.g. a markdown cell, a docstring and comments) with proper variable names. You must push your code to GitHub, either as part of this repository in the Project folder, or on your own repository.\n",
     "\n",
     "Examples of possible diagrams include a: McCabe-Thiele diagram, biofuel enrichment diagram, a PDE (combustion rate model, heat or wave equation), psychrometric chart, phase diagrams or 3D infrared spectra.\n",
     "\n",
