Typeset URLs as links

--- a/Unit 1 - Data Objects.ipynb
+++ b/Unit 1 - Data Objects.ipynb
@@ -184,7 +184,7 @@
     "\n",
     "How do we know which functions a module contains? And how do we know what these functions do?\n",
     "\n",
-    "Use the `dir()` (directory) function to return a list of functions within a module. Excluding the argument displays the local variable and function names you have defined. To see the names of built-in functions and variables, import `builtins` and use it as the argument (`dir(builtins)`); however, their documentation is available here: https://docs.python.org/3/library/functions.html\n",
+    "Use the `dir()` (directory) function to return a list of functions within a module. Excluding the argument displays the local variable and function names you have defined. To see the names of built-in functions and variables, import `builtins` and use it as the argument (`dir(builtins)`); however, their documentation is available [here](https://docs.python.org/3/library/functions.html).\n",
     "\n",
     "When the output of a cell is very long, click on the left column to scroll the output, or double click to hide it."
    ]
@@ -282,14 +282,14 @@
    "metadata": {},
    "source": [
     "Online help is also available. Use the following links and books as futher reading:\n",
-    "-  https://docs.python.org/3.7/tutorial/, the official tutorial by Guido van Rossum\n",
-    "-  https://en.wikibooks.org/wiki/Non-Programmer%27s_Tutorial_for_Python_3\n",
+    "-  The official [tutorial](https://docs.python.org/3.7/tutorial/) by Guido van Rossum\n",
+    "-  [Non-Programmer's Tutorial for Python 3](https://en.wikibooks.org/wiki/Non-Programmer%27s_Tutorial_for_Python_3)\n",
     "-  By Carl Sandrock: [Python page on the wiki](http://chemeng.up.ac.za/wiki/index.php/Python), [ChemEng cookbook](https://github.com/alchemyst/chemengcookbook)\n",
     "-  Introduction to programming for engineers using Python by Logan Page, Daniel Wilke, and Schalk Kok\n",
     "-  Introduction to Python for Computational Science and Engineering by Hans Fanghor\n",
     "\n",
-    "Be sure to follow Carl's advice to \"Read the docs!\" before using a new module. The documentation provides more information than `help(module)`, including examples. Simply Google \"module docs python\". Remember we're currently in Python 3.7.2, but that may update in the future. For example:\n",
-    "https://docs.python.org/3/library/math.html\n",
+    "Be sure to follow Carl's advice to \"Read the docs!\" before using a new module. The documentation provides more information than `help(module)`, including examples. Simply Google \"math docs python\", for [example](https://docs.python.org/3/library/math.html). Remember we're currently in Python 3.7.2, but that may update in the future. For example:\n",
+    "\n",
     "\n",
     "Also under Help in the notebook menubar, you'll find links including:\n",
     " + The user interface tour\n",
@@ -311,9 +311,9 @@
     " + Press the left column to change it from green (edit mode) to blue (command mode)\n",
     " + (In command mode) Shift + Up to select multiple cells\n",
     " + Alt+Drag mouse+Directional arrows for multicursor support (edit many lines at once)\n",
-    " + More advanced tricks: https://www.dataquest.io/blog/jupyter-notebook-tips-tricks-shortcuts/\n",
-    " + Markdown guide: https://www.markdownguide.org/basic-syntax/\n",
-    " + Markdown table generator: https://www.tablesgenerator.com/markdown_tables#"
+    " + [More advanced tricks](https://www.dataquest.io/blog/jupyter-notebook-tips-tricks-shortcuts/)\n",
+    " + [Markdown guide](https://www.markdownguide.org/basic-syntax/)\n",
+    " + [Markdown table generator](https://www.tablesgenerator.com/markdown_tables#)"
    ]
   },
   {
@@ -329,7 +329,7 @@
     "- Secondly note how there is **no asterisk** needed for the complex number. \n",
     "- Thirdly note that a boolean can have a numerical value (e.g. `False = 0` and `True = 1`).\n",
     "\n",
-    "The PEP8 variable naming conventions are available here: http://www.python.org/dev/peps/pep-0008/ (i.e. names should be at least 3 characters, descriptive and lowercase). Both Python and Ruby recommend UpperCamelCase for class names, CAPITALIZED_WITH_UNDERSCORES for constants, and lowercase_separated_by_underscores for other names.\n",
+    "The PEP8 variable naming conventions are available [here]( http://www.python.org/dev/peps/pep-0008/) (i.e. names should be at least 3 characters, descriptive and lowercase). Both Python and Ruby recommend UpperCamelCase for class names, CAPITALIZED_WITH_UNDERSCORES for constants, and lowercase_separated_by_underscores for other names.\n",
     "\n",
     "Common variable names you may see on the internet include: foo, bar, baz, foobar, val and vec. "
    ]
@@ -653,8 +653,7 @@
     "### Lists\n",
     "Lists are some of the most used Python objects, so study them well!\n",
     "\n",
-    "Here's a link to the tutorial:\n",
-    "https://docs.python.org/3/tutorial/datastructures.html"
+    "Here's a link to the [tutorial](https://docs.python.org/3/tutorial/datastructures.html)"
    ]
   },
   {
@@ -862,7 +861,7 @@
    "source": [
     "Slicing is used to cut out a piece of a sequence between certain indices in the order `[start:end:step]`. All three slice components are not required; by default, start is 0, end is the last and step is 1. Consider the following roster:\n",
     "\n",
-    "![](Figures/Slicing_Roster.png)"
+    "![](Assets/Slicing_Roster.png)"
    ]
   },
   {
@@ -1106,7 +1105,7 @@
    "source": [
     "Note that in Python 2 the % operator was used, in case you find such examples on the internet. \n",
     "\n",
-    "More can be read here: https://docs.python.org/3/tutorial/inputoutput.html"
+    "More can be read [here](https://docs.python.org/3/tutorial/inputoutput.html)."
    ]
   },
   {
@@ -1142,7 +1141,7 @@
     "\n",
     "To actually copy the list, you have various possibilities. The first 4 below create _shallow_ copies.\n",
     "\n",
-    "(Answer on https://stackoverflow.com/questions/2612802/how-to-clone-or-copy-a-list)"
+    "(Answer from [StackOverflow](https://stackoverflow.com/questions/2612802/how-to-clone-or-copy-a-list))."
    ]
   },
   {
