--- a/Unit 2 - Iteration.ipynb
+++ b/Unit 2 - Iteration.ipynb
@@ -386,8 +386,9 @@
     "It's conventional to provide your functions with a **docstring**, especially if you are going to make your work public. \n",
     "\n",
     "The first line should be a sentence offering a short description, written as a command. Other standards for one-liners and multi-line docstrings are available here:\n",
-    "-  https://www.python.org/dev/peps/pep-0257/\n",
-    "-  https://www.pythonforbeginners.com/basics/python-docstrings"
+    "\n",
+    "-  [Docstrings for Beginners](https://www.pythonforbeginners.com/basics/python-docstrings)\n",
+    "-  [Docstring Conventions](https://www.python.org/dev/peps/pep-0257/)"
    ]
   },
   {
