--- a/Unit 3 - NumPy.ipynb
+++ b/Unit 3 - NumPy.ipynb
@@ -317,7 +317,7 @@
     " + append to a list and convert to an array afterward or,\n",
     " + pre-allocate the array (if the total size is known) e.g. by making an array of only ones or zeros.\n",
     " \n",
-    "(Answer on https://stackoverflow.com/questions/7332841/add-single-element-to-array-in-numpy)"
+    "(Answer from [StackOverflow](https://stackoverflow.com/questions/7332841/add-single-element-to-array-in-numpy))."
    ]
   },
   {
@@ -485,9 +485,9 @@
    "source": [
     "Meshgrid forms 2 matrices, as illustrated below. Essentially, if you were to make a 3-D plot, you require a grid of points on the XY-plane. The xx matrix therefore represents the x-coordinates over that grid. \n",
     "\n",
-    "![](Figures/Meshgrid.png)\n",
+    "![](Assets/Meshgrid.png)\n",
     "\n",
-    "(Answer on [StackOverflow](https://stackoverflow.com/questions/36013063/what-is-the-purpose-of-meshgrid-in-python-numpy))"
+    "(Answer from [StackOverflow](https://stackoverflow.com/questions/36013063/what-is-the-purpose-of-meshgrid-in-python-numpy))"
    ]
   },
   {
@@ -709,7 +709,7 @@
    "source": [
     "## Polynomials \n",
     "\n",
-    "For numerical evaluations of polynomials, NumPy provides \"convenience classes\" for quick calculations, including root-finding and curve-fitting: https://docs.scipy.org/doc/numpy/reference/routines.polynomials.classes.html\n",
+    "For numerical evaluations of polynomials, NumPy provides \"convenience classes\" for quick calculations, including root-finding and curve-fitting. See the [docs](https://docs.scipy.org/doc/numpy/reference/routines.polynomials.classes.html).\n",
     "\n",
     "For information on *plotting, symbolic calculations and nonlinear curve-fitting* see the following units.\n",
     "\n",
@@ -787,15 +787,22 @@
     "\n",
     "There are many more functions in the `numpy` library that can't be discussed here. Although Python is currently at version 3.7, the modules have their own version numbers:\n",
     "\n",
-    " + Mathematical (\"universal\") functions like arcsin: https://docs.scipy.org/doc/numpy/reference/routines.math.html\n",
-    " + Financial functions like NPV: https://docs.scipy.org/doc/numpy/reference/routines.financial.html\n",
-    " + More statistics: https://docs.scipy.org/doc/numpy/reference/routines.statistics.html\n",
-    " + More linear algebra: https://docs.scipy.org/doc/numpy/reference/routines.linalg.html\n",
-    " + More polynomials: https://docs.scipy.org/doc/numpy/reference/routines.polynomials.html\n",
-    " + Dates and time: https://docs.scipy.org/doc/numpy/reference/arrays.datetime.html\n",
-    " + Discrete (fast) Fourier transform: https://docs.scipy.org/doc/numpy/reference/routines.fft.html\n",
-    " + Sorting, searching, and counting in arrays: https://docs.scipy.org/doc/numpy/reference/routines.sort.html"
+    " + [Mathematical (\"universal\") functions like arcsin](https://docs.scipy.org/doc/numpy/reference/routines.math.html)\n",
+    " + [Financial functions like NPV](https://docs.scipy.org/doc/numpy/reference/routines.financial.html)\n",
+    " + [More statistics](https://docs.scipy.org/doc/numpy/reference/routines.statistics.html)\n",
+    " + [More linear algebra](https://docs.scipy.org/doc/numpy/reference/routines.linalg.html)\n",
+    " + [More polynomials](https://docs.scipy.org/doc/numpy/reference/routines.polynomials.html)\n",
+    " + [Dates and time](https://docs.scipy.org/doc/numpy/reference/arrays.datetime.html)\n",
+    " + [Discrete (fast) Fourier transform](https://docs.scipy.org/doc/numpy/reference/routines.fft.html)\n",
+    " + [Sorting, searching, and counting in arrays](https://docs.scipy.org/doc/numpy/reference/routines.sort.html)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
