--- a/Unit 4 - Matplotlib.ipynb
+++ b/Unit 4 - Matplotlib.ipynb
@@ -9,8 +9,8 @@
     "The best way to inspect your calculations and draw conclusions from your data is by visualising it. So let's have a look! Note, the more advanced plot customisation techniques will be discussed in a later notebook. \n",
     "Examples and help are available here: \n",
     "\n",
-    "- https://matplotlib.org/tutorials/index.html\n",
-    "- http://scipy-lectures.org/intro/matplotlib/index.html\n"
+    "- [Matplolib tutorials](https://matplotlib.org/tutorials/index.html)\n",
+    "- [Matplotlib: plotting](http://scipy-lectures.org/intro/matplotlib/index.html)\n"
    ]
   },
   {
@@ -482,7 +482,7 @@
     "\n",
     "$$ \\Rightarrow \\textbf{F}(0, 1) = \\textbf{j} = \\langle 0, 1 \\rangle $$\n",
     "\n",
-    "Other example: http://www.scipy-lectures.org/intro/matplotlib/auto_examples/plot_quiver_ex.html"
+    "Another [example](http://www.scipy-lectures.org/intro/matplotlib/auto_examples/plot_quiver_ex.html)."
    ]
   },
   {
@@ -560,7 +560,7 @@
     "\n",
     "The `contour()` function takes three arguments: a grid of x values, a grid of y values, and a grid of z values (thus we use `meshgrid()`). \n",
     "\n",
-    "Example from: https://jakevdp.github.io/PythonDataScienceHandbook/04.04-density-and-contour-plots.html"
+    "(Example from the [PythonDataScienceHandbook](https://jakevdp.github.io/PythonDataScienceHandbook/04.04-density-and-contour-plots.html))."
    ]
   },
   {
@@ -673,9 +673,9 @@
     "\n",
     "Firstly let's see how to create 3D axes, then how to draw a parametric line and random datapoints. For these points, note that the colormap is mapped to the z-data (to illustrate the direction of change).\n",
     "\n",
-    "Example from: https://jakevdp.github.io/PythonDataScienceHandbook/04.12-three-dimensional-plotting.html\n",
+    "(Example from [PythonDataScienceHandbook](https://jakevdp.github.io/PythonDataScienceHandbook/04.12-three-dimensional-plotting.html))\n",
     "\n",
-    "Help on mplot3d: https://matplotlib.org/tutorials/toolkits/mplot3d.html#toolkit-mplot3d-tutorial"
+    "Help on [mplot3d](https://matplotlib.org/tutorials/toolkits/mplot3d.html#toolkit-mplot3d-tutorial)"
    ]
   },
   {
