--- a/Unit Exercises.ipynb
+++ b/Unit Exercises.ipynb
@@ -174,7 +174,19 @@
    "source": [
     "## Exercise 4.1:\n",
     "\n",
-    "Plot the isotherms for 1 mol of ideal gas at 25 °C and 100 °C, as the volume increases from 10 L to 30 L. Label the PV-graph appropriately with a title, legend and axis labels."
+    "a) Plot the isotherms for 1 mol of ideal gas at 25 °C and 100 °C, as the volume increases from 10–30 L. The y-axis should display Pressure (kPa) and the x-axis Volume (L). Also provide a title and legend.\n",
+    "\n",
+    "b) Draw a contour plot of the isotherms. The y-axis should display pressure from 80–300 kPa and the x-axis volume from 10–30 L. Use black lines for the temperature values.\n",
+    "\n",
+    "c) Plot the PVT-surface of 1 mol of an ideal gas, from 1 to 4 L and 10 to 70 °C. Display the temperature axis values in degrees Celsius.\n",
+    "\n",
+    "Now plot the PVT-surface of 1 mol water in the same region using the Van der Waals equation of state.\n",
+    "$$ \\Big(P+ a \\Big(\\frac{n}{V}\\Big)^2\\Big)(V-nb) = nRT $$\n",
+    "\n",
+    "with a = 5.537 $\\frac{bar L^2}{mol}$\n",
+    "and b = 0.03049 $\\frac{L}{mol}$\n",
+    "\n",
+    "[Data source](https://bit.ly/2VMxIu3)"
    ]
   },
   {
@@ -183,15 +195,9 @@
    "source": [
     "## Exercise 4.2:\n",
     "\n",
-    "Plot the PVT-surface of 1 mol of an ideal gas, from 1 to 4 L and 10 to 70 °C. Display the temperature axis values in degrees Celsius.\n",
+    "Illustrate the Maclaurin series from Ex 2.1. Write a function called `maclaurin_cos` that returns the Taylor approximation of cos at $x=0$ with a given order $n$. Plot the true cosine function with a black dashed-dot line and the value of cos(0) with a blue star. Plot the approximations from order 0 to 4 and place the legend such that it does not overlap a curve. The x-axis should range from -5 to 5, and the y-axis from -2 to 2.\n",
     "\n",
-    "Now plot the PVT-surface of 1 mol water in the same region using the Van der Waals equation of state.\n",
-    "$$ \\Big(P+ a \\Big(\\frac{n}{V}\\Big)^2\\Big)(V-nb) = nRT $$\n",
-    "\n",
-    "with a = 5.537 $\\frac{bar L^2}{mol}$\n",
-    "and b = 0.03049 $\\frac{L}{mol}$\n",
-    "\n",
-    "Data source: https://bit.ly/2VMxIu3"
+    "Note: you may want to use `math.factorial` or `numpy.math.factorial()`"
    ]
   },
   {
@@ -200,9 +206,7 @@
    "source": [
     "## Exercise 4.3:\n",
     "\n",
-    "Illustrate the Maclaurin series from Ex 2.1. Write a function called `taylor_cos` that returns the Taylor approximation of cos at a given $x$ with a given order $n$. Plot the true cosine function with a black dashed-dot line and the value of cos(0) with a blue star. Plot the approximations from order 0 to 4 and place the legend such that it does not overlap a curve. The x-axis should range from -5 to 5, and the y-axis from -2 to 2.\n",
-    "\n",
-    "Note: you may want to use `math.factorial` or `numpy.math.factorial()`"
+    "Generate Gaussian random data with an average of 50, standard deviation of 20 and 88 data points. Draw a 1x2 subplot. The plot on the left must be a histogram in which the values below the average are red and the values above it are blue. The plot on the right must show the cumulative frequency for each data point (thus the y-axis spans 0 to 1), as well as a dashed vertical line at the average."
    ]
   },
   {
