--- a/Unit 5 - Pandas.ipynb
+++ b/Unit 5 - Pandas.ipynb
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The keyword arguments for `pd.Series` include `index` and `dtype` which allows you to specify custom index values and the data type, respectively. \n",
+    "The **optional** keyword arguments for `pd.Series` include `index` and `dtype` which allows you to specify custom index values and the data type, respectively. \n",
     "\n",
     "The data types (dtypes) are listed [here](https://docs.scipy.org/doc/numpy-1.10.4/user/basics.types.html). \n",
     "Some examples include:\n",
@@ -276,7 +276,7 @@
     "data = [['Alex', 10.0], \n",
     "        ['Bob', 12.0], \n",
     "        ['Clark', 13.0]]\n",
-    "df = pd.DataFrame(data, columns=['Name', 'Age'], dtype='int64')\n",
+    "df = pd.DataFrame(data, columns=['Name', 'Age'], dtype='int8')\n",
     "df"
    ]
   },
@@ -353,7 +353,7 @@
    "outputs": [],
    "source": [
     "# display values greater than or equal to 30\n",
-    "df[df >= 30]"
+    "df[df['Age'] >= 30]"
    ]
   },
   {
@@ -638,9 +638,9 @@
    "outputs": [],
    "source": [
     "plt.figure()\n",
-    "plt.plot(time, A1, label='A1')\n",
-    "plt.plot(time, A2, label='A2')\n",
-    "plt.plot(time, A3, label='A3')\n",
+    "plt.plot(time, A1, 'o', label='A1')\n",
+    "plt.plot(time, A2, 'o', label='A2')\n",
+    "plt.plot(time, A3, 'o', label='A3')\n",
     "plt.ylabel('Cummulative mass loss (g)')\n",
     "plt.xlabel('Time (h)')\n",
     "plt.legend()\n",
@@ -660,7 +660,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "df_perm.pct_change().head()"
@@ -714,7 +716,7 @@
    "outputs": [],
    "source": [
     "plt.figure()\n",
-    "plt.plot(time_d, film_perm)\n",
+    "plt.plot(time_d, film_perm, 'o')\n",
     "plt.ylabel('Cummulative mass loss (%)')\n",
     "plt.xlabel('Time (days)')\n",
     "plt.legend(['A1', 'A2', 'A3'])\n",
