Update Unit 7 after the lecture
Make examples more clear

--- a/Unit 7 - SymPy.ipynb
+++ b/Unit 7 - SymPy.ipynb
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "print(np.sqrt(8))\n",
-    "sp.sqrt(8) "
+    "sp.sqrt(8)"
    ]
   },
   {
@@ -149,15 +149,6 @@
    "source": [
     "x, y, z = sp.symbols('x, y, z')\n",
     "x, y, z"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# sp.symbols?"
    ]
   },
   {
@@ -479,7 +470,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Beware of substituting at singularities\n",
+    "# Don't substitute at singularities\n",
     "expr.subs({x:0})"
    ]
   },
@@ -626,6 +617,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sp.solve(x**4 - 1, x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# note that the output here is a set\n",
     "sp.solveset(x**4 - 1, x)"
    ]
   },
@@ -669,7 +670,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here are some other examples."
+    "Consider the exponential function which doesn't cross the x-axis:\n",
+    "$$ e^x = 0 $$"
    ]
   },
   {
@@ -679,6 +681,23 @@
    "outputs": [],
    "source": [
     "sp.solveset(sp.exp(x), x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following function has multiple roots at 3.\n",
+    "$$ f(x) = x^3 - 6x^2 + 9x $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp.factor(x**3 - 6*x**2 + 9*x)"
    ]
   },
   {
@@ -697,6 +716,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sp.plot(x**3 - 6*x**2 + 9*x, (x, -1, 4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# only the values of the roots are given here\n",
     "sp.solve(x**3 - 6*x**2 + 9*x, x)"
    ]
   },
@@ -744,7 +773,7 @@
     "\n",
     "SymPy can solve certain ODEs (here I will write them such that they equal zero), but first we must define general \"function symbols\". We typically use `f(x)` to denote a function that we're trying to find, and `f(x).diff()` as mentioned in the Differentiation section.\n",
     "\n",
-    "You can read more here: https://docs.sympy.org/latest/modules/solvers/ode.html"
+    "You can read more [here](https://docs.sympy.org/latest/modules/solvers/ode.html)."
    ]
   },
   {
@@ -835,7 +864,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also substitute initial conditions (`ics`). Notice how changing the hint from separable to Bernoulli changes the output:\n",
+    "We can also substitute initial conditions (`ics`). Notice how changing the hint from separable to Bernoulli changes the appearance of the output, although the expression is the same:\n",
     "\n",
     "$$ x y' + y = y^2, \\,\\, y(1) = 4$$"
    ]
