Update Unit 6 after lecture
Add camel example. Make epsilon more realistic.

--- a/Unit 6 - SciPy.ipynb
+++ b/Unit 6 - SciPy.ipynb
@@ -175,7 +175,7 @@
     "\n",
     "Sometimes we need to find an $ x $ such that $ f(x) = 0 $, especially for non-linear or implicit functions. There are 2 ways to do this: `fsolve()` which only needs one starting point close to the root (but is not guaranteed to converge); or `bisect()` which is more robust, but slower and requires an interval. Both of these methods also work for systems of equations. In any case, it's usually a good idea to plot the function to see where roots may be. \n",
     "\n",
-    "Let's consider the Colebrook equation for the friction factor $f$. We'll choose the parameters as roughness (ϵ) 0.15 mm, diameter (D) 20 mm, and Reynolds number (Re) 200 000:\n",
+    "Let's consider the Colebrook equation for the friction factor $f$. We'll choose the parameters as roughness (ϵ) 0.046 mm, diameter (D) 20 mm, and Reynolds number (Re) 200 000:\n",
     "\n",
     "$$ \\frac{1}{\\sqrt{f}} = -2\\log_{10} \\left( \\frac{\\epsilon/D}{3.7} + \\frac{2.51}{\\mathrm{Re} \\sqrt{f}}\\right)  $$\n",
     "\n",
@@ -201,7 +201,7 @@
     "    ϵ, D, Re = const\n",
     "    return 1/f**0.5 + 2*np.log10(ϵ/D/3.7 + 2.51/(Re*f**0.5))\n",
     "\n",
-    "param = [0.15, 20, 200000]\n",
+    "param = [0.046, 20, 200000]\n",
     "fspan = np.linspace(0.01, 0.08, 100)\n",
     "\n",
     "plt.plot(fspan, colebrook(fspan, param))\n",
@@ -213,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the graph we can see that the root of the Colebrook equation lies between 0.03 and 0.04."
+    "From the graph we can see that the root of the Colebrook equation lies between 0.02 and 0.03."
    ]
   },
   {
@@ -231,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bisect(colebrook, 0.03, 0.04, param)"
+    "bisect(colebrook, 0.02, 0.03, param)"
    ]
   },
   {
@@ -388,7 +388,7 @@
     "x = time\n",
     "y = A3\n",
     "f_lin = interp1d(x, y)\n",
-    "f_cub = interp1d(x, y, kind='cubic')\n",
+    "f_cub = interp1d(x, y, kind='quadratic')\n",
     "\n",
     "print(f_lin(25))\n",
     "print(f_cub(25))\n",
@@ -397,7 +397,7 @@
     "\n",
     "plt.plot(x, y, 'o')\n",
     "plt.plot(xnew, f_lin(xnew), '-', label='linear')\n",
-    "plt.plot(xnew, f_cub(xnew), '--', label='cubic')\n",
+    "plt.plot(xnew, f_cub(xnew), '--', label='quadratic')\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -562,7 +562,9 @@
    "source": [
     "## Introduction to optimisation\n",
     "\n",
-    "Optimisation is a very complex mathematical science involving finding the best solution to a problem under certain constraints. The reader should consult the docs for more detailed examples and algorithms."
+    "Optimisation is a very complex mathematical science involving finding the best solution to a problem under certain constraints. The reader should consult the docs for more detailed examples and algorithms. \n",
+    "\n",
+    "Here, the [three-hump camel function](https://en.wikipedia.org/wiki/Test_functions_for_optimization) is tested; its global minimum is at (0,0). With a guess of (1,1) it only finds a local minimum."
    ]
   },
   {
@@ -580,12 +582,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# simple 2 parameter function to be minimised, with an initial guess of [1,2]\n",
+    "# 2 parameter function to be minimised, with an initial guess\n",
     "\n",
-    "def func(x):\n",
-    "    return x[0]**2 + (x[1]-1)**2\n",
+    "def func(var):\n",
+    "    X, Y = var\n",
+    "    return 2*X**2 - 1.05*X**4 + X**6/6 + X*Y + Y**2\n",
     "\n",
-    "fmin(func, [1,2])"
+    "fmin(func, [1,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mpl_toolkits import mplot3d\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.linspace(-2, 2, 13)\n",
+    "y = np.linspace(-2, 2, 13)\n",
+    "X, Y = np.meshgrid(x, y)\n",
+    "Z = 2*X**2 - 1.05*X**4 + X**6/6 + X*Y + Y**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure()\n",
+    "ax = plt.axes(projection='3d')\n",
+    "ax.plot_surface(X, Y, Z, rstride=1, cstride=1, cmap='plasma', edgecolor='none')\n",
+    "ax.set_title('Three-hump camel')\n",
+    "plt.show()"
    ]
   },
   {
