Add units 5-7 to contents, fixes #10

--- a/Contents.ipynb
+++ b/Contents.ipynb
@@ -14,15 +14,14 @@
     "\n",
     "[Unit 4 - Matplotlib](Unit%204%20-%20Matplotlib.ipynb)\n",
     "\n",
+    "[Unit 5 - Pandas](Unit%205%20-%20Pandas.ipynb)\n",
+    "\n",
+    "[Unit 6 - SciPy](Unit%206%20-%20SciPy.ipynb)\n",
+    "\n",
+    "[Unit 7 - SymPy](Unit%207%20-%20SymPy.ipynb)\n",
+    "\n",
     "[Unit Exercises](Unit%20Exercises.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -41,7 +40,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
