Add cheat sheets

--- a/Unit 1 - Data Objects.ipynb
+++ b/Unit 1 - Data Objects.ipynb
@@ -281,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Online help is also available. Use the following links and books as futher reading:\n",
+    "Online help is also available, including books: \n",
     "-  The official [tutorial](https://docs.python.org/3.7/tutorial/) by Guido van Rossum\n",
     "-  [Non-Programmer's Tutorial for Python 3](https://en.wikibooks.org/wiki/Non-Programmer%27s_Tutorial_for_Python_3)\n",
     "-  By Carl Sandrock: [Python page on the wiki](http://chemeng.up.ac.za/wiki/index.php/Python), [ChemEng cookbook](https://github.com/alchemyst/chemengcookbook)\n",
@@ -310,8 +310,10 @@
     " + Ctrl+Shift+P to see keyboard shortcuts on the command palette\n",
     " + Press the left column to change it from green (edit mode) to blue (command mode)\n",
     " + (In command mode) Shift + Up to select multiple cells\n",
-    " + Alt+Drag mouse+Directional arrows for multicursor support (edit many lines at once)\n",
-    " + [More advanced tricks](https://www.dataquest.io/blog/jupyter-notebook-tips-tricks-shortcuts/)\n",
+    " + Alt+Drag mouse+Directional arrows for **multicursor** support (edit many lines at once)\n",
+    " \n",
+    "Further reading:\n",
+    " + [Advanced jupyter tricks](https://www.dataquest.io/blog/jupyter-notebook-tips-tricks-shortcuts/)\n",
     " + [Markdown guide](https://www.markdownguide.org/basic-syntax/)\n",
     " + [Markdown table generator](https://www.tablesgenerator.com/markdown_tables#)"
    ]
